--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         {# Logo #}
-        <a class="navbar-brand" href="{% url 'core:home' %}">MyMDB</a>
+        <a class="navbar-brand" href="{% url 'core:movie_list' %}">MyMDB</a>
         {# Navbar items #}
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             {# Dropdown nav #}
