--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,9 +21,9 @@
             </li>
         </ul>
         {# Login/Logout button #}
-        <a type="button" class="btn btn-link" style="margin-right: 5px;" id="login-modal-btn"
+        <a type="button" class="btn btn-link" style="margin-right: 5px;"
             {% if not user.is_authenticated %}
-                data-url="{% url 'users:login' %}"
+                href="{% url 'users:login' %}"
             {% else %}
                 href="{% url 'users:logout' %}"
             {% endif %}>
