--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,7 +21,7 @@
             </li>
         </ul>
         {# Login/Logout button #}
-        <a type="button" class="btn btn-link" style="margin-right: 5px;"
+        <a class="card-link" style="margin-right: 20px;"
             {% if not user.is_authenticated %}
                 href="{% url 'users:login' %}"
             {% else %}
