update pagination url

--- a/core/templates/core/movie_list.html
+++ b/core/templates/core/movie_list.html
@@ -23,6 +23,6 @@
     </div>
         {% if is_paginated %}
             <br>
-            {% include 'includes/pagination.html' %}
+            {% include 'core/includes/pagination.html' %}
         {% endif %}
 {% endblock content %}
