--- a/core/templates/core/includes/vote_form.html
+++ b/core/templates/core/includes/vote_form.html
@@ -1,11 +1,13 @@
 {% load crispy_forms_tags %}
 
 {% if vote_form %}
+<div class="form-row">
     <form method="POST" action="{{vote_form_url}}">
         {% csrf_token %}
         {{vote_form|crispy}}
         <button type="submit" class="btn btn-primary">Vote</button>
     </form>
+</div>
 {% else %}
     <p class="text-center small">
         Want to vote? <a class="card-link" href="{% url 'users:login' %}"><b>Login</b></a> now!
