remove custom-card:hover and add hover-shadow

--- a/assets/contents/site.css
+++ b/assets/contents/site.css
@@ -68,18 +68,6 @@ body {
 .custom-card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-/*
-.custom-card:hover .custom-image {
-	opacity: 0.3;
-}
-
-.custom-card:hover .card-container {
-	opacity: 0.3;
-}
-
-.custom-card:hover .middle {
-	opacity: 1;
-} */
 
 img {
 	border-radius: 5px 5px 0 0;
@@ -98,4 +86,8 @@ img {
 
 .asteriskField {
 	display: none;
+}
+
+.hover-shadow:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
