--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,8 +33,8 @@
         </a>
         {# Search form #}
         <form method="GET" action="" class="form-inline my-2 my-lg-0">
-            <input class="form-control col-sm-7" type="search" placeholder="Search" name="q">
-            <button class="btn btn-outline-secondary col-sm-4" type="submit"><i class="fas fa-search" style="margin-right:5px;"></i>Search</button>
+            <input class="form-control col-sm" type="search" placeholder="Search" name="q">
+            <button class="btn btn-outline-secondary col-sm" type="submit" style="margin-left:4px"><i class="fas fa-search" style="margin-right:5px;"></i></button>
         </form>
     </div>
 </nav>
