--- a/assets/contents/site.css
+++ b/assets/contents/site.css
@@ -4,6 +4,11 @@ body {
 	background: #f1f1f1;
 }
 
+.carousel-inner img {
+	width: 100%;
+	height: 100%;
+}
+
 /* Header/Blog Title */
 .header {
 	padding-top: 30px;
