--- a/core/templates/core/movie_detail.html
+++ b/core/templates/core/movie_detail.html
@@ -6,22 +6,16 @@
     <link rel="stylesheet" href="{% static 'contents/ekko-lightbox.css' %}">
 {% endblock css %}
 
+{% block title %}{{movie}}{% endblock title %}
+
 {% block content %}
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm-9">
             <div class="card col-sm">
                 <div class="row">
                     {# movie's image #}
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <img class="image" src="{% if movie.image %}{{movie.image.url}}{% else %}{% static 'images/no-product-image.png' %}{% endif %}" style="width:100%">
-                        <br>
-                        {# ligthbox #}
-                        {% include 'core/includes/image_lightbox.html' %}
-                        <hr>
-                        {# Upload btn #}
-                        <a class="btn btn-outline-warning col" href="{% url 'core:image_upload' movie.slug %}">
-                            <i class="fas fa-cloud-upload-alt" style="margin-right:10px"></i><b>Upload</b>
-                        </a>
                     </div>
                     <div class="card-container col-lg-8 col-md-8 col-sm-12">
                         <h4><b>{{movie.title}}</b></h4>
@@ -48,6 +42,17 @@
                     </div>
                     
                 </div>
+            </div>
+        </div>
+        <div class="card col-sm-3">
+            <div class="card-body d-flex flex-column">
+                {# ligthbox #}
+                {% include 'core/includes/image_lightbox.html' %}
+                <hr>
+                {# Upload btn #}
+                <a class="btn btn-light mt-auto" href="{% url 'core:image_upload' movie.slug %}">
+                    <i class="fas fa-cloud-upload-alt" style="margin-right:10px"></i><b>Upload</b>
+                </a>
             </div>
         </div>
     </div>
