update search button size

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -34,7 +34,7 @@
         {# Search form #}
         <form method="GET" action="" class="form-inline my-2 my-lg-0">
             <input class="form-control col-sm" type="search" placeholder="Search" name="q">
-            <button class="btn btn-outline-secondary col-sm" type="submit" style="margin-left:4px"><i class="fas fa-search" style="margin-right:5px;"></i></button>
+            <button class="btn btn-outline-secondary col-sm-2" type="submit" style="margin-left:4px"><i class="fas fa-search" style="margin-right:5px;"></i></button>
         </form>
     </div>
 </nav>
