--- a/core/templates/core/imageupload/index.html
+++ b/core/templates/core/imageupload/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="row d-flex justify-content-center">
-        <div class="card border-secondary col-7">
+        <div class="card border-secondary col-7" style="margin-top: 3rem;">
             <div class="card-title">{{movie}} - Upload</div>
             <div class="card-body">
                 <button type="button" class="btn btn-warning js-upload-photos col">
