remove banner and update container style

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,9 +23,7 @@
     {% include 'includes/navbar.html' %}
 </header>
 <body>
-    {# Banner #}
-    {% include 'includes/banner.html' %}
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 1.5rem; margin-bottom: 1rem;padding-left: 5px;padding-right: 5px;">
         {# Body #}
         {% block content %}{% endblock content %}
     </div>
