--- a/core/templates/core/movie_detail.html
+++ b/core/templates/core/movie_detail.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% load static ratings%}
+{% load static %}
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
@@ -8,84 +8,13 @@
 
 {% block title %}{{movie}}{% endblock title %}
 
+{% block banner %}{% include 'core/includes/banner.html' %}{% endblock banner %}
 {% block content %}
     <div class="row">
-        {# Right side #}
-        <div class="col-sm-9" style="padding-left: 0px;padding-right: 5px;">
-            <div class="card col-sm">
-                <div class="row">
-                    {# movie's image #}
-                    <div class="col-lg-4 col-md-4 col-sm-12">
-                        <img class="image" src="{% if movie.image %}{{movie.image.url}}{% else %}{% static 'images/no-product-image.png' %}{% endif %}" style="width:100%">
-                    </div>
-                    <div class="card-container col-lg-8 col-md-8 col-sm-12">
-                        <h4><b>{{movie.title}}</b></h4>
-                        <br>
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-12">
-                               <p><b>Year:</b> {{movie.year}}</p> 
-                            </div>
-                            <div class="col-lg-6 col-sm-12">
-                                {# star rating #}
-                                {% ratings movie icon_width=20 %}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-12">
-                                <p><b>Rating:</b> <span class="badge badge-primary">{{movie.get_rating_display}}</span></p>
-                            </div>
-                            <div class="col-lg-6 col-sm-12">
-                                <p><b>Runtime:</b> {{movie.runtime}}</p>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <h6><b>Category:</b></h6>
-                                <div class="col-sm-9" style="margin-left:5px">
-                                    {% for cat in movie.category.all %}
-                                        <a class="card-link small" href="#" style="margin-left: 0px;">{{ cat.name }},</a>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                        <p><b>Summery: </b>{{movie.description|linebreaks}}</p>
-                        <br>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
         {# Left side #}
-        <div class="col-lg-3 col-md-3 col-sm-12" style="padding-right: 0px;padding-left: 5px;">
-            {# Directors and actors #}
-            <div class="card col">
-                <h6><b>Directors</b></h6>
-                <hr>
-                <h6><b>Casts</b></h6>
-                <div class="row overflow">
-                    {% for actor in movie.actors.all %}
-                        <div class="card col-12">
-                            <div class="card-body">
-                                <h6 class="card-title small"><b>{{actor}}</b></h6>
-                                <p class="card-text small text-muted">{{actor.role}}</p>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-            {# Uploaded images card #}
-            <div class="card col">
-                <div class="card-body d-flex flex-column">
-                    {# ligthbox #}
-                    {% include 'core/includes/image_lightbox.html' %}
-                    <hr>
-                    {# Upload btn #}
-                    <a class="btn btn-light mt-auto" href="{% url 'core:image_upload' movie.slug %}">
-                        <i class="fas fa-cloud-upload-alt" style="margin-right:10px"></i><b>Upload</b>
-                    </a>
-                </div>
-            </div>
-        </div>
+        {% include 'core/includes/movie_detail_lside.html' %}
+        {# Right side #}
+        {% include 'core/includes/movie_detail_rside.html' %}
     </div>
 {% endblock content %}
 
