--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,8 @@
     {% include 'includes/navbar.html' %}
 </header>
 <body>
+    {# Banner #}
+    {% block banner %}{% endblock banner %}
     <div class="container-fluid" style="margin-top: 1.5rem; margin-bottom: 1rem;padding-left: 5px;padding-right: 5px;">
         {# Body #}
         {% block content %}{% endblock content %}
